<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_dark">

    <TextView
        android:id="@+id/username_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textColor="@color/secondary"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/username_input_text"
        app:layout_constraintStart_toStartOf="@+id/username_input_text" />

    <EditText
        android:id="@+id/username_input_text"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="64dp"
        android:autofillHints="@string/username_hint"
        android:background="@color/secondary"
        android:textColor="@color/secondary_light"
        android:hint="@string/username_hint"
        android:inputType="text"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_max="488dp" />

    <TextView
        android:id="@+id/password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_label"
        android:textColor="@color/secondary"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/password_input_text"
        app:layout_constraintStart_toStartOf="@+id/password_input_text" />

    <EditText
        android:id="@+id/password_input_text"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="64dp"
        android:autofillHints="@string/password_hint"
        android:background="@color/secondary"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        android:textColor="@color/secondary_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_input_text"
        app:layout_constraintWidth_max="488dp" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/primary"
        android:text="@string/login_button"
        android:textColor="@color/secondary"
        app:layout_constraintEnd_toEndOf="@+id/password_input_text"
        app:layout_constraintTop_toBottomOf="@+id/password_input_text" />

</androidx.constraintlayout.widget.ConstraintLayout>